fix width bugs overflowing

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -16,6 +16,10 @@
 	font-family: 'Jersey 10', sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .underline-center {
     position: relative;
     display: inline-block;
